# check_assignment

./: .env  .gitignore  README.md  README.txt  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
scripts/: config.py  config_pydantic_settings.py  login.py
src/: app.py  config.py  main.py  test.py
src/api/: client.py  login.py  model.py
src/gui/: app.py  assignment.py  assignment_viewer.py  release_info.py  resources_viewer.py  util.py
