[tool.poetry]
name = "check-assignment"
version = "0.1.0"
description = ""
authors = ["Ri4385"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "0.0.2"
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
pydantic-core = "2.23.4"
requests = "2.32.3"
streamlit = "1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
